[package]
name = "filefile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
